[package]
name = "fpgaif-router"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
capnpc = "0.18.0"

[dependencies]
flate2 = "1.0.28"
capnp = "0.18.10"
petgraph = "0.6.4"

# [build-dependencies.capnpc]
# path = "capnproto-rust/capnpc"

# [dependencies.capnp]
# path = "capnproto-rust/capnp"
